# Semenov_Yaroslav_Artemovich

./: README.md
app/: Program.cs
cli_event_chat/: Program.cs  cli_event_chat.sln
cli_event_chat/Types/: Message.cs  User.cs
daily/: Program.cs  daily.sln
daily/Entities/: Entity.cs  Post.cs  User.cs
ddb/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ModifiWindow.xaml  ModifiWindow.xaml.cs  ddb.csproj  ddb.sln
ddb/Migrations/: 20241214134234_InitialCreate.Designer.cs  20241214134234_InitialCreate.cs  AppDbContextModelSnapshot.cs
linq_first/: Program.cs  linq_first.sln
sort_card/: Program.cs
work_10_go/: compose.yml  go.mod  go.sum  main.go  prometheus.yml  Практическая_№10.docx
work_11_rs/: Cargo.toml  index.html
work_11_rs/my_models/: Cargo.toml
work_11_rs/my_models/src/: lib.rs  native.rs
work_11_rs/src/: app.rs  main.rs  task_1.rs  task_2.rs  task_3.rs  task_4.rs  task_5.rs  task_6.rs
work_11_rs/src-tauri/: Cargo.toml  tauri.conf.json
work_11_rs/src-tauri/src/: lib.rs  main.rs
work_12/: compose.yml
work_13_rs/: my_backup.service  my_backup.timer  my_log_data.service  my_open_download_folder.desktop  my_open_link.desktop  my_welcome.service  my_welcome.timer  network_report.service  open_link.sh
work_13_rs/t1/: Cargo.toml
work_14_15/: Program.cs  work_14_15.sln
work_1_testing_white_box/: Program.cs  data.txt  f.csv  work_1_testing_white_box.sln
work_20_21/: Program.cs
work_28_29/: Program.cs  work_28_29.sln
work_30_31/: Program.cs  work_30_31.sln
work_36_37_char/: Program.cs  work_36_37_char.sln
work_3_compose/: Dockerfile  compose.yaml  work_3_compose.sln
work_40_41/: Program.cs  data.txt  work_40_41.sln
work_4_rs/: compose.yaml
work_54_55/: Program.cs  cars.txt  log.txt  my_file.txt  my_log.txt  numbers.txt  random.txt  work_54_55.sln
work_5_py/: main.py  pyproject.toml
work_5_rs/: Cargo.toml  prometheus.yml
work_5_rs/src/: main.rs  metrics.rs  sse.rs
work_5_rs/t1/: Практическая_№5.docx
work_5_rs/t2/: protected_file.txt
work_5_rs/t2/src/: main.rs
work_5_rs/t3/: a.txt  b.txt
work_5_rs/t4/: Compress.7z
work_5_rs/t5/: 1.txt  2.txt  Cargo.toml  t5
work_5_rs/t5/src/: main.rs
work_5_rs/t6/: Cargo.toml
work_5_rs/t6/src/: main.rs
work_5_rs/t7/: 1.txt  2.txt  3.txt  Cargo.toml
work_5_rs/t7/src/: main.rs
work_6/: monitoring.conf  status.json  tst_sitest.bash  url_bash.sh  urls.txt
work_60_61/: Program.cs  work_60_61.sln
work_6_rs/: Cargo.toml  README.md  clean.sh  compose.yaml  index.html
work_6_rs/my_models/: Cargo.toml
work_6_rs/my_models/src/: lib.rs  native.rs
work_6_rs/src-tauri/: Cargo.toml  tauri.conf.json
work_6_rs/src-tauri/src/: database.rs  lib.rs  main.rs
work_7/: compose.yml  prometheus.yml
work_72_73/: Program.cs  work_72_73.sln
work_74_75/: Program.cs  work_74_75.sln
work_76_77/: Program.cs  work_76_77.sln
work_8/: compose.yml  mysql.cnf  prometheus.yml
work_9_rs/: compose.yml
(+23 files in other folders)
