[package]
name = "work_2_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
chrono = "0.4.42"
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
prometheus = "0.14.0"
tokio = { version = "1.48.0", features = [ "full" ] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = {version = "0.6.7", features = ["fs", "trace"] }
tracing-subscriber = "0.3.20"

