[package]
name = "my_models"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
redis = { version = "0.32.7", features = ["tokio-comp"], optional = true}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_str = "0.1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls", "derive"], optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true}

[features]
default = []
native = ["tokio", "redis", "sqlx"]
