[package]
name = "work_6_rs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "work_6_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
my_models = {path = "../my_models", features = ["native"] }
sqlx = { version = "0.8.6", features = ["postgres", "tls-rustls"] }
once_cell = "1.21.3"
redis = { version = "0.32.7", features = ["tokio-comp"] }
tokio = { version = "1.48.0", features = ["full"] }

